# ftp-client

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yml  quality-gate.yml  tests.yml
examples/: list-names.rs
sample-server/: Dockerfile  requirements.txt  server.py
src/: client.rs  error.rs  lib.rs  main.rs  sample_server.py  status_code.rs  sync.rs  tests.rs
tests/: client.rs
