[package]
name = "ftp-client"
version = "0.1.0"
authors = ["Adilson Neto <almeidneto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-error = "0"
native-tls = "0"
derive_more = "0"
once_cell = "1"
log = "0"